--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>gs-accessing-data-jpa</artifactId>
+    <artifactId>mini-hearthstone</artifactId>
     <version>0.1.0</version>
 
     <parent>
