--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
+    <groupId>org.univ-nantes.shinyhunters</groupId>
     <artifactId>mini-hearthstone</artifactId>
     <version>0.1.0</version>
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
-    </parent>
 
     <properties>
         <java.version>1.8</java.version>
