--- a/MHClient/mini-hearthstone/package.json
+++ b/MHClient/mini-hearthstone/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "net": "^1.0.2",
     "rxjs": "~6.3.3",
     "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3",
