--- a/MHClient/mini-hearthstone/package.json
+++ b/MHClient/mini-hearthstone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mini-hearthstone",
+  "name": "mini-hearth-stone",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,11 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
-    "net": "^1.0.2",
     "rxjs": "~6.3.3",
-    "sockjs-client": "^1.3.0",
-    "stompjs": "^2.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
