--- a/MHClient/pom.xml
+++ b/MHClient/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>mini-hearthstone-client</artifactId>
     <version>0.0.1</version>
 
+    <parent>
+        <groupId>org.univ-nantes.shinyhunters</groupId>
+        <artifactId>mini-hearthstone</artifactId>
+        <version>0.1.0</version>
+    </parent>
     
 </project>
