J'avais fait une erreur dans un des pom

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>MHClient</module>
         <module>MHDatabase</module>
-        <module>MHDatabase</module>
+        <module>MHServer</module>
     </modules>
 
     <properties>
