Resolution du bug 'NULL pointer exception' quand on essayait d'utiliser un repository

--- a/MHServer/src/main/ressources/application.properties
+++ b/MHServer/src/main/ressources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://user:useruser1@ds227199.mlab.com:27199/minihearthstone
+spring.data.mongodb.uri=mongodb://userReadOnly:useruser1@ds227199.mlab.com:27199/minihearthstone
