--- a/MHClient/mini-hearthstone/package.json
+++ b/MHClient/mini-hearthstone/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@stomp/stompjs": "^5.1.0",
+    "JSON": "^1.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "sockjs-client": "^1.3.0",
