--- a/MHClient/mini-hearthstone/package.json
+++ b/MHClient/mini-hearthstone/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.1.0",
     "@stomp/stompjs": "^5.1.0",
     "JSON": "^1.0.0",
+    "angular-material": "^1.1.11",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "sockjs-client": "^1.3.0",
