--- a/MHServer/pom.xml
+++ b/MHServer/pom.xml
@@ -114,6 +114,12 @@
             <version>2.7.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
